Gallery: allow switch photos with keys. ESC key should close the modal, add a min-height and avoid stretching image

--- a/app/assets/stylesheets/brandscopic.scss
+++ b/app/assets/stylesheets/brandscopic.scss
@@ -6039,6 +6039,7 @@ ul#reports-list {
 		position: relative;
 		float: left;
 		min-width: 400px;
+		min-height: 470px;
 		.slider-inner {
 			position: absolute;
 			top: 0px;
